# digital-twin-resume

./: README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/include/: robot_sim.hpp
cpp/src/: bindings.cpp  kinematics.cpp  trajectory.cpp
src/app/: globals.css  layout.tsx  page.tsx
src/components/dashboard/: ControlPanel.test.tsx  ControlPanel.tsx  SystemLog.test.tsx  SystemLog.tsx
src/components/scene/: RobotArm.tsx  RobotScene.tsx  VisionOverlay.test.tsx  VisionOverlay.tsx  Workpiece.tsx
src/lib/data/: index.ts  logs.json  profile.json  projects.json  skills.json  types.ts
src/lib/stores/: robotStore.test.ts  robotStore.ts
src/lib/wasm/: robotSim.test.ts  robotSim.ts
